[gd_scene load_steps=2 format=3 uid="uid://b4s6yjde2g4p3"]

[ext_resource type="Script" uid="uid://dmv6vmksmlr35" path="res://scripts/question.gd" id="1_lk18j"]

[node name="Question" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lk18j")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 128.0
offset_bottom = 72.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.9, 0.9)

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 83.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonA" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonB" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonC" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ButtonD" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="ProgressBar" type="ProgressBar" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -27.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0

[connection signal="pressed" from="Panel/VBoxContainer/ButtonA" to="." method="_on_button_a_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonB" to="." method="_on_button_b_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonC" to="." method="_on_button_c_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/ButtonD" to="." method="_on_button_d_pressed"]
